--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "pre-commit>=4.5.1",
     "seaborn>=0.13.2",
     "streamlit-monaco>=0.1.3",
+    "watchdog>=6.0.0",
 ]
 
 [tool.setuptools]
